crates/lang/macro/tests/ui/contract/fail/impl-block-for-non-storage-02.stderr
error[E0271]: type mismatch resolving `<NonContract as contract::_::_::{closure#0}::TypeEq>::This == Contract`
  --> $DIR/impl-block-for-non-storage-02.rs:21:10
   |
21 |     impl NonContract {}
   |          ^^^^^^^^^^^ expected struct `Contract`, found struct `NonContract`
   |
note: required by a bound in `contract::_::_::{closure#0}::assert_type_eq_all`
  --> $DIR/impl-block-for-non-storage-02.rs:21:10
   |
21 |     impl NonContract {}
   |          ^^^^^^^^^^^
   |          |
   |          required by a bound in this
   |          required by this bound in `contract::_::_::{closure#0}::assert_type_eq_all`
   = note: this error originates in the macro `::ink_lang::static_assertions::assert_type_eq_all` (in Nightly builds, run with -Z macro-backtrace for more info)
